--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.10"
 toml = "^0.10.2"
-py-notify = {path = "/home/gauol/Scratch/Projects - Code/py_nofify", develop = true}
+pyyaml = "^6.0"
+icon-mapper = {path = "/home/gauol/Scratch/Projects - Code/icon-mapper", develop = true}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0.0"
